Footer company landing

--- a/company-mob/index.html
+++ b/company-mob/index.html
@@ -834,61 +834,99 @@
             </div>
             <div class="sectionCounter"><span class="sectionCounter__current" id="company-counter-current">1</span> / <span class="sectionCounter__all" id="company-counter-all">8</span></div>
         </div>
-        <footer class="footer">
-            <div class="footer__wrapper">
-                <div class="footerGrid">
-                    <div class="footerGrid__left">
-                        <div class="footerCall">
-                            <img class="icon footerCall__icon" src="./index_files/icon-phone.svg" alt="иконка телефона">
-                            <div class="footerCall__numbers"><a class="footerCall__number-item" href="tel:88002345800">8-800-2345-800</a></div>
-                        </div>
+        <footer class="mobile font-gotham">
+            <div class="container">
+                <ul class="footerLinks">
+                    <li>
+                        Клиентская поддержка
+                        <ul>
+                            <li>
+                                <a href="tel:88002345800">
+                                    <i class="mdi mdi-phone-in-talk-outline"></i> 8-800-2345-800
+                                </a>
+                            </li>
+                            <li>
+                                <a>
+                                    <i class="mdi mdi-clock-outline"></i> с 6:00 до 22:00 (МСК)
+                                </a>
+                            </li>
+                            <li>
+                                <a href="mailto:office@greenway.group">
+                                    <i class="mdi mdi-email-outline"></i> office@greenway.group
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/list">
+                                    <i class="far fa-compass"></i> Контакты
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Интернет-магазин
+                        <ul>
+                            <li>
+                                <a href="/shop/all" class="link with_leaves">Продукты</a>
+                                <a href="/faq/pay" class="link with_leaves">Оплата заказов</a>
+                                <a href="/faq/payback" class="link with_leaves">Возврат</a>
+                                <a href="/faq/delivery" class="link with_leaves">Способ доставки</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Информация
+                        <ul>
+                            <li>
+                                <a href="/company" class="link with_leaves">О компании</a>
+                                <a href="/oppartinuties" class="link with_leaves">Возможности</a>
+                                <a href="/history" class="link with_leaves">История Greenway</a>
+                                <a href="/faq" class="link with_leaves">Ответы на вопросы</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <div class="footerSocial">
+                    <div class="logo">
+                        <img src="/static/images/logo.svg" alt="">
                     </div>
-                    <div class="footerGrid__middle">
-                        <div class="footerInfo">
-                            <a href="mailto:office@greenway.group" class="footerInfo__link">
-                                <img id="mail-icon" class="icon icon-mail" src="./index_files/icon-mail.svg" alt="иконка почты"> office@greenway.group
-                            </a>
-
-                            <div class="footerInfo__shedule">
-                                <span>Адрес центрального офиса:</span>
-                                <div class="footerInfo__shedule-text">
-                                    <img class="icon" src="./index_files/icon-location.svg" alt="иконка геометки"> г.&nbsp;Новосибирск, ул.&nbsp;Инженерная,&nbsp;4а
-                                </div>
-                            </div>
-                            <div class="footerInfo__shedule">
-                                <span>Время работы call-центра:</span>
-                                <div class="footerInfo__shedule-text">
-                                    <img class="icon" src="./index_files/icon-clock.svg" alt="иконка часов">
-                                    <p>с 6:00 до 22:00 (МСК)</p>
-
-
-                                </div>
-                            </div>
-                        </div>
+                    <div class="social">
+                        <a href="//instagram.com/greenway_style" class="footer__link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="" fill="#8a3ab9">
+                                <path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8 1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5 5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3z"></path>
+                            </svg>
+                        </a>
+                        <a href="//yt.be" class="footer__link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="" fill="#FF0000">
+                                <path d="M10,15L15.19,12L10,9V15M21.56,7.17C21.69,7.64 21.78,8.27 21.84,9.07C21.91,9.87 21.94,10.56 21.94,11.16L22,12C22,14.19 21.84,15.8 21.56,16.83C21.31,17.73 20.73,18.31 19.83,18.56C19.36,18.69 18.5,18.78 17.18,18.84C15.88,18.91 14.69,18.94 13.59,18.94L12,19C7.81,19 5.2,18.84 4.17,18.56C3.27,18.31 2.69,17.73 2.44,16.83C2.31,16.36 2.22,15.73 2.16,14.93C2.09,14.13 2.06,13.44 2.06,12.84L2,12C2,9.81 2.16,8.2 2.44,7.17C2.69,6.27 3.27,5.69 4.17,5.44C4.64,5.31 5.5,5.22 6.82,5.16C8.12,5.09 9.31,5.06 10.41,5.06L12,5C16.19,5 18.8,5.16 19.83,5.44C20.73,5.69 21.31,6.27 21.56,7.17Z"></path>
+                            </svg>
+                        </a>
+                        <a href="//t.me/" class="footer__link">
+                            <svg class="icon icon-tg" xmlns="http://www.w3.org/2000/svg" width="74" height="74" id="icon-tg" viewBox="0 0 34 29" fill="#27a6e5">
+                                <path d="M33.3342 0.70374C32.7873 0.217311 32.0098 0.0552111 31.3052 0.280604L1.40989 9.84554C0.595148 10.1062 0.0426479 10.8121 0.00233932 11.6437C-0.0379029 12.4754 0.443875 13.2286 1.22973 13.5624L7.23319 16.1118L24.9085 6.59052C25.3403 6.35797 25.8821 6.46664 26.1835 6.84582C26.4851 7.22513 26.4558 7.76131 26.1147 8.10756L15.0954 19.2905L12.8355 27.2154L18.2596 23.2733L24.6737 28.3676C25.0473 28.6645 25.5039 28.8193 25.9695 28.8193C26.1912 28.8192 26.415 28.7842 26.6327 28.7125C27.3077 28.4903 27.8082 27.9556 27.9713 27.2821L33.9456 2.62851C34.1154 1.92771 33.8812 1.19017 33.3342 0.70374Z"></path>
+                            </svg>
+                        </a>
                     </div>
-                    <div class="footerGrid__right">
-                        <div class="footerSocial">
-                            <div class="socialIcons">
-                                <a href="https://www.instagram.com/greenway_style/" target="_blank"><svg class="icon icon-in"><use xlink:href="#icon-in"></use></svg></a>
-                                <a href="https://www.youtube.com/channel/UCQx94ndp4A6tnqzdKCWYOYQ" target="_blank"><svg class="icon icon-yt"><use xlink:href="#icon-yt"></use></svg></a>
-                                <a href="https://teleg.run/mygreenwaynews" target="_blank"><svg class="icon icon-tg"><use xlink:href="#icon-tg"></use></svg></a>
-                                <a href="https://vm.tiktok.com/JYp7B6j/" target="_blank"><svg class="icon icon-tik"><use xlink:href="#icon-tik"></use></svg></a>
-                                <a href="https://www.facebook.com/MyGreenwayGlobal/" target="_blank"><svg class="icon icon-fb"><use xlink:href="#icon-fb"></use></svg></a>
-
-                            </div>
-                        </div>
-                        <div class="policyLinks footerPolicy">
-                            <p><a href="/s/order/" target="_blank">Оформление заказа</a><br>
-                                <a href="/s/pay/" target="_blank">Оплата</a><br>
-                                <a href="/s/offer/" target="_blank">Публичная&nbsp;оферта</a><br>
-                                <a href="/s/personal/" target="_blank">Политика&nbsp;конфиденциальности</a><br>
-                                <!--<a href="/s/product_quality/" target="_blank">Политика качества и безопасности</a><br/>-->
-                                <!--<a href="/s/product_quality_2021/" target="_blank">Цели в области качества на 2021 г.</a><br/>--></p>
-                        </div>
-                    </div>
+                </div>
+                <div class="footerFooter">
+                    <p>Маркетплейс бренд-консультанта Greenway, был разработан с использованием текстовых и графических материалов с официального сайта компании <a href="//mygreenway.com">mygreenway.com</a></p>
+                    <p>© 2021 ingreenway.club Все права защищены.</p>
                 </div>
             </div>
         </footer>
+
+        <link rel="stylesheet" href="/styles/common/ModuleFooterMob.css">
+        <script src="/js/ui/mobile-footer.js"></script>
+
+        <style>
+            footer .container {
+                padding-left: 0px !important;
+                padding-right: 0px !important;
+            }
+            
+            footer .container .footerLinks li {
+                padding-left: 0px !important;
+            }
+        </style>
     </main>
     <script>
         $(function() {
