--- a/history/index.html
+++ b/history/index.html
@@ -1266,19 +1266,12 @@
                                         <p></p>
                                         <div class="socialIcons s-contacts__social s-contacts__social-grid">
                                             <a href="https://www.instagram.com/greenway_style/" target="_blank"><svg class="icon icon-in"><use xlink:href="#icon-in"></use></svg></a>
-                                            <a href="https://www.youtube.com/channel/UCQx94ndp4A6tnqzdKCWYOYQ" target="_blank"><svg class="icon icon-yt"><use xlink:href="#icon-yt"></use></svg></a>
                                             <a href="https://teleg.run/mygreenwaynews" target="_blank"><svg class="icon icon-tg"><use xlink:href="#icon-tg"></use></svg></a>
-                                            <a href="https://vm.tiktok.com/JYp7B6j/" target="_blank"><svg class="icon icon-tik"><use xlink:href="#icon-tik"></use></svg></a>
                                             <a href="https://www.facebook.com/MyGreenwayGlobal/" target="_blank"><svg class="icon icon-fb"><use xlink:href="#icon-fb"></use></svg></a>
 
                                         </div>
                                         <div class="policyLinks s-contacts__policy d-md-block">
-                                            <p><a href="/s/order/" target="_blank">Оформление заказа</a><br>
-                                                <a href="/s/pay/" target="_blank">Оплата</a><br>
-                                                <a href="/s/offer/" target="_blank">Публичная&nbsp;оферта</a><br>
-                                                <a href="/s/personal/" target="_blank">Политика&nbsp;конфиденциальности</a><br>
-                                                <!--<a href="/s/product_quality/" target="_blank">Политика качества и безопасности</a><br/>-->
-                                                <!--<a href="/s/product_quality_2021/" target="_blank">Цели в области качества на 2021 г.</a><br/>--></p>
+                                            <p style="max-width: unset !important;width: 800px;margin-top: 230px;">Маркетплейс бренд-консультанта Greenway, был разработан с использованием текстовых и графических материалов с официального сайта компании mygreenway.com © 2021 ingreenway.club. Все права защищены.</p><br>
                                         </div>
                                     </div>
                                 </div>
