Header PC and fixs

--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -374,7 +374,6 @@
     <header class="landing_pc">
         <div class="logo" onclick="window.location.href = '/';">
             <img src="/static/images/mini-logo.svg" class="mini_logo" alt="">
-            <img src="/static/images/logo.svg" class="big_logo" alt="">
         </div>
         <div class="container-open_menu">
             <div class="open-menu">
@@ -391,6 +390,35 @@
             </div>
         </div>
     </header>
+    <header class="landing_pc landing_pc_showed">
+        <div class="logo">
+            <img src="/static/images/logo.svg" class="logo_img" alt="">
+        </div>
+        <div class="consultant-info">
+            <div class="consultant-line main">
+                <img src="/static/images/ui-icons/user.svg" alt="">
+                <h1>Консультант бренда</h1>
+            </div>
+            <div class="consultant-line" style="margin-left: 39px;">
+                <p>Левко Эмма id 9416992</p>
+            </div>
+            <div class="consultant-line" style="margin-left: 39px;">
+                <a href="/consultant">Подробнее <i class="mdi mdi-arrow-right"></i></a>
+            </div>
+        </div>
+        <div class="menuNavigation">
+            <ul>
+                <li><a href="/history/" class="nav-history">История Greenway</a></li>
+                <li><a href="/company/" class="nav-about">О компании</a></li>
+                <li><a href="/opportunities/" class="nav-opp">Возможности</a></li>
+                <li><a href="/eco/" class="nav-eco">Экопроекты</a></li>
+                <li><a href="/news/" class="nav-news">Новости</a></li>
+                <li><a href="/shop/" class="nav-shop">Интернет-магазин</a></li>
+            </ul>
+
+        </div>
+    </header>
+    <div class="close_landing_pc_showed"></div>
 
     <!-- Top Search -->
     <div class="topSearch">
