Change history footer

--- a/history/index.html
+++ b/history/index.html
@@ -1192,9 +1192,9 @@
                                     <h1>Контакты</h1>
                                     <div class="s-contacts__content">
                                         <p><a href="tel:88002345800">8-800-2345-800</a></p>
+                                        <p><a style="line-height: 1;margin-top: 40px;display: block;">Время работы call-центра:</a> </p>
+                                        <p><a style="line-height: 1;margin-bottom: 40px;display: block;">с 6:00 до 22:00 (МСК)</a></p>
                                         <p class=""><a href="mailto:office@greenway.group">office@greenway.group</a></p>
-                                        <p class="s-contacts__schedule"><span>Время работы call-центра:</span> </p>
-                                        <p>с 6:00 до 22:00 (МСК)</p>
 
 
                                         <p></p>
