--- a/eco-mob/index.html
+++ b/eco-mob/index.html
@@ -1141,5 +1141,18 @@
 
 
     <span style="position: absolute; top: -99999px; left: -99999px; width: auto; padding: 0px; white-space: pre; letter-spacing: 0px; font-size: 14px; font-family: &quot;Gotham Pro&quot;, sans-serif; font-weight: 400; text-transform: none;">Страна</span></body>
+<style>
+    .firstScreen h1 {
+        font-weight: 400;
+        font-size: 24px;
+        color: #323232;
+        position: relative;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        font-weight: normal;
+    }
+</style>
 
 </html>
