--- a/company-mob/index.html
+++ b/company-mob/index.html
@@ -1378,5 +1378,17 @@
 
 
     <span style="position: absolute; top: -99999px; left: -99999px; width: auto; padding: 0px; white-space: pre; letter-spacing: 0px; font-size: 14px; font-family: &quot;Gotham Pro&quot;, sans-serif; font-weight: 400; text-transform: none;">Страна</span></body>
+<style>
+    div {
+        box-sizing: border-box !important;
+    }
+    
+    header.mobile div,
+    .popup-wrapper,
+    .joinBlock,
+    .joinBlock * {
+        box-sizing: unset !important;
+    }
+</style>
 
 </html>
