--- a/eco-mob/index.html
+++ b/eco-mob/index.html
@@ -1155,4 +1155,17 @@
     }
 </style>
 
+<style>
+    div {
+        box-sizing: border-box !important;
+    }
+    
+    header.mobile div,
+    .popup-wrapper,
+    .joinBlock,
+    .joinBlock * {
+        box-sizing: unset !important;
+    }
+</style>
+
 </html>
